--- a/students/test/index.html
+++ b/students/test/index.html
@@ -37,7 +37,7 @@
                     </a>
                 </li>
                 <li class=" nav-item">
-                    <a class="nav-link" href="#">
+                    <a class="nav-link" href="../../sponsors.html">
                         <h5>Sponsors</h5>
                     </a>
                 </li>
