--- a/group_page.html
+++ b/group_page.html
@@ -70,19 +70,21 @@
             </p>
         </div>
     </div>
-
     <hr>
-    <div class="row d-flex justify-content-center">
-        <div class="col-6">
-            <a href="#Exhibition">
-                <h4>EXHIBITION</h4>
-            </a>
-        </div>
-        <div class="col-6">
-            <!-- INSERT LINK TO CATALOGUE -->
-            <a href="#">
-                <h4>CATALOGUE</h4>
-            </a>
+    <div class="container-fluid">
+
+        <div class="row d-flex justify-content-center">
+            <div class="col-6">
+                <a href="#Exhibition">
+                    <h4>EXHIBITION</h4>
+                </a>
+            </div>
+            <div class="col-6">
+                <!-- INSERT LINK TO CATALOGUE -->
+                <a href="#">
+                    <h4>CATALOGUE</h4>
+                </a>
+            </div>
         </div>
     </div>
     <div class="container-fluid container-2"></div>
