--- a/students/test/index.html
+++ b/students/test/index.html
@@ -22,7 +22,7 @@
 <body>
     <!--NAVBAR-->
     <nav class="navbar navbar-expand-lg navbar-6">
-        <a class="navbar-brand" href="index.html"> <img src="../../logo/Logo_Green-1.png" width="50" height="50" alt="">
+        <a class="navbar-brand" href="/index.html"> <img src="../../logo/Logo_Green-1.png" width="50" height="50" alt="">
         </a>
         <!-- Collapse button -->
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent15"
